确认adr-010,adr-011,adr-012
